--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Data de Aniversario:</strong> <span>6 nov 1995</span></li>
-                   <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+123 456 7890</span></li>
+                   <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>45 99999</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Foz do iguaçu,Paraná</span></li>
                 </ul>
               </div>
